class Statistics:
    def __init__(self):
        self.total_users = 0
        self.active_users = 0
        self.daily_selection_user = None
